--- a/config/database.yml
+++ b/config/database.yml
@@ -23,7 +23,12 @@ default: &default
 development:
   <<: *default
   database: todoapp_development
-
+  adapter: postgresql
+  encoding: unicode
+  database: your_app_development
+  pool: <%= ENV.fetch("RAILS_MAX_THREADS", 5) %>
+  host: 127.0.0.1
+  port: 5432
   # The specified database role being used to connect to PostgreSQL.
   # To create additional roles in PostgreSQL see `$ createuser --help`.
   # When left blank, PostgreSQL will use the default role. This is
